// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a contact correctly 1`] = `
<div
  className="sc-htpNat ixzLSm"
>
  <div
    className="sc-bdVaJa dNIUDI"
  >
    <div
      className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1 card"
    >
      <div
        className="MuiCardMedia-root-29 media"
        style={
          Object {
            "backgroundImage": "url(\\"/avatars/24.jpg\\")",
          }
        }
      />
      <div
        className="MuiCardContent-root-31"
      >
        <h2
          className="MuiTypography-root-32 MuiTypography-headline-37 MuiTypography-gutterBottom-50"
        >
          Marchall
           
          Abdee
        </h2>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41"
        >
          Email: 
          mabdee0@behance.net
        </p>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41"
        >
          Phone: 
          2539464783
        </p>
      </div>
      <div
        className="MuiCardActions-root-58"
      >
        <a
          className="MuiCardActions-action-59"
          href="/edit/4"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-86 MuiButton-root-60 MuiButton-text-62 MuiButton-textPrimary-63 MuiButton-flat-65 MuiButton-flatPrimary-66 MuiButton-sizeSmall-83"
            disabled={false}
            id="edit-contact"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-61"
            >
              Edit
            </span>
            <span
              className="MuiTouchRipple-root-89"
            />
          </button>
        </a>
        <button
          className="MuiButtonBase-root-86 MuiButton-root-60 MuiButton-text-62 MuiButton-textPrimary-63 MuiButton-flat-65 MuiButton-flatPrimary-66 MuiButton-sizeSmall-83 MuiCardActions-action-59"
          disabled={false}
          id="delete-contact"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-61"
          >
            Delete
          </span>
          <span
            className="MuiTouchRipple-root-89"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when loading 1`] = `
<div
  className="sc-htpNat ixzLSm"
>
  <div
    className="sc-bdVaJa dNIUDI"
  >
    <div
      className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1 card"
    >
      <div
        className="MuiCardMedia-root-29 media"
        style={
          Object {
            "backgroundImage": "url(\\"/avatars/24.jpg\\")",
          }
        }
      />
      <div
        className="sc-bwzfXH fqBCWh"
      >
        <div
          className="MuiCircularProgress-root-96 MuiCircularProgress-colorPrimary-99 MuiCircularProgress-indeterminate-98"
          role="progressbar"
          style={
            Object {
              "height": 50,
              "width": 50,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-101"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-102 MuiCircularProgress-circleIndeterminate-104"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="MuiCardActions-root-58"
      >
        <a
          className="MuiCardActions-action-59"
          href="/edit/4"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-86 MuiButton-root-60 MuiButton-text-62 MuiButton-textPrimary-63 MuiButton-flat-65 MuiButton-flatPrimary-66 MuiButton-sizeSmall-83"
            disabled={false}
            id="edit-contact"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-61"
            >
              Edit
            </span>
            <span
              className="MuiTouchRipple-root-89"
            />
          </button>
        </a>
        <button
          className="MuiButtonBase-root-86 MuiButton-root-60 MuiButton-text-62 MuiButton-textPrimary-63 MuiButton-flat-65 MuiButton-flatPrimary-66 MuiButton-sizeSmall-83 MuiCardActions-action-59"
          disabled={false}
          id="delete-contact"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-61"
          >
            Delete
          </span>
          <span
            className="MuiTouchRipple-root-89"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when no large avatar image 1`] = `
<div
  className="sc-htpNat ixzLSm"
>
  <div
    className="sc-bdVaJa dNIUDI"
  >
    <div
      className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1 card"
    >
      
      <div
        className="MuiCardContent-root-31"
      >
        <h2
          className="MuiTypography-root-32 MuiTypography-headline-37 MuiTypography-gutterBottom-50"
        >
          Marchall
           
          Abdee
        </h2>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41"
        >
          Email: 
          mabdee0@behance.net
        </p>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41"
        >
          Phone: 
          2539464783
        </p>
      </div>
      <div
        className="MuiCardActions-root-58"
      >
        <a
          className="MuiCardActions-action-59"
          href="/edit/4"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-86 MuiButton-root-60 MuiButton-text-62 MuiButton-textPrimary-63 MuiButton-flat-65 MuiButton-flatPrimary-66 MuiButton-sizeSmall-83"
            disabled={false}
            id="edit-contact"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-61"
            >
              Edit
            </span>
            <span
              className="MuiTouchRipple-root-89"
            />
          </button>
        </a>
        <button
          className="MuiButtonBase-root-86 MuiButton-root-60 MuiButton-text-62 MuiButton-textPrimary-63 MuiButton-flat-65 MuiButton-flatPrimary-66 MuiButton-sizeSmall-83 MuiCardActions-action-59"
          disabled={false}
          id="delete-contact"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-61"
          >
            Delete
          </span>
          <span
            className="MuiTouchRipple-root-89"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
